TOMEE-4325 - Fix JAX-RS Signature Tests