@@ -30,15 +30,45 @@
 
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jakartaee-api</artifactId>
+            <version>${version.jakartaee-api}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>jakarta.ws.rs</groupId>
             <artifactId>jakarta-restful-ws-tck</artifactId>
             <version>${jaxrs.tck.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.netbeans.tools</groupId>
-            <artifactId>sigtest-maven-plugin</artifactId>
-            <version>1.6</version>
-            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>jakarta.ws.rs</groupId>
+                    <artifactId>jakarta.ws.rs-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.json.bind</groupId>
+                    <artifactId>jakarta.json.bind-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.json</groupId>
+                    <artifactId>jakarta.json-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.xml.bind</groupId>
+                    <artifactId>jakarta.xml.bind-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.annotation</groupId>
+                    <artifactId>jakarta.annotation-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>jakarta.activation</groupId>
+                    <artifactId>jakarta.activation-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.netbeans.tools</groupId>
+                    <artifactId>sigtest-maven-plugin</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
     <build>
@@ -59,77 +89,46 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
-                        <id>copy</id>
-                        <phase>generate-test-resources</phase>
+                        <id>copy-tck-cdi-api-signature-file</id>
+                        <phase>generate-test-sources</phase>
                         <goals>
-                            <goal>copy</goal>
+                            <goal>unpack</goal>
                         </goals>
-
                         <configuration>
                             <artifactItems>
                                 <artifactItem>
-                                    <groupId>org.apache.tomee</groupId>
-                                    <artifactId>jakartaee-api</artifactId>
-                                    <version>${version.jakartaee-api}</version>
-                                    <type>jar</type>
+                                    <groupId>jakarta.ws.rs</groupId>
+                                    <artifactId>jakarta-restful-ws-tck</artifactId>
+                                    <version>${jaxrs.tck.version}</version>
                                     <overWrite>true</overWrite>
-                                    <outputDirectory>${project.build.directory}/signaturedirectory
-                                    </outputDirectory>
-                                    <destFileName>jakartaee-api.jar</destFileName>
+                                    <includes>**/jakarta.ws.rs.sig_3.1.0</includes>
                                 </artifactItem>
                             </artifactItems>
+                            <outputDirectory>${project.build.directory}/api-signature</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
+                <groupId>jakarta.tck</groupId>
+                <artifactId>sigtest-maven-plugin</artifactId>
+                <version>2.3</version>
+                <executions>
+                    <execution>
+                        <id>sigtest</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
-                    <argLine>
-                        --add-opens java.base/java.lang=ALL-UNNAMED
-                        --add-opens java.base/java.io=ALL-UNNAMED
-                        --add-opens java.base/java.net=ALL-UNNAMED
-                        --add-opens java.base/javax.net.ssl=ALL-UNNAMED
-                        --add-opens java.xml/javax.xml.namespace=ALL-UNNAMED
-                        --add-opens java.base/java.util=ALL-UNNAMED
-                        --add-opens java.base/java.security=ALL-UNNAMED
-                        --add-opens java.base/java.util.concurrent=ALL-UNNAMED
-                    </argLine>
-                    <reuseForks>false</reuseForks>
-                    <forkCount>1</forkCount>
-                    <systemProperties>
-                        <jimage.dir>${project.build.directory}/jimage</jimage.dir>
-                        <signature.sigTestClasspath>
-                            ${project.build.directory}/signaturedirectory/jakartaee-api.jar:${project.build.directory}/jimage/java.base:${project.build.directory}/jimage/java.rmi:${project.build.directory}/jimage/java.sql:${project.build.directory}/jimage/java.naming
-                        </signature.sigTestClasspath>
-                    </systemProperties>
-                    <dependenciesToScan>
-                        <dependency>jakarta.ws.rs:jakarta-restful-ws-tck</dependency>
-                    </dependenciesToScan>
-                    <includes>
-                        <include>**/JAXRSSigTestIT</include>
-                    </includes>
-                    <!--
-                       For some odd reason, the signature test will fail in reflection mode run under J17 with the following error report.
-                       However, the fields are present.
-
-                       Note: It also fails with the original 3.1.0 artifact, so most likely a deeper issue to follow up.
-
-                       Missing Fields
-                        jakarta.ws.rs.core.Cookie:              field public final static int jakarta.ws.rs.core.Cookie.DEFAULT_VERSION = 1
-                           affected jakarta.ws.rs.core.NewCookie
-                        jakarta.ws.rs.core.NewCookie:           field public final static int jakarta.ws.rs.core.NewCookie.DEFAULT_MAX_AGE = -1
-                        Added Fields
-                        jakarta.ws.rs.core.Cookie:              field public final static int jakarta.ws.rs.core.Cookie.DEFAULT_VERSION
-                           affected jakarta.ws.rs.core.NewCookie
-                        jakarta.ws.rs.core.NewCookie:           field public final static int jakarta.ws.rs.core.NewCookie.DEFAULT_MAX_AGE
-                        duplicate messages suppressed: 2
-
-                    -->
-                    <skip>true</skip>
+                    <sigfile>${project.build.directory}/api-signature/ee/jakarta/tck/ws/rs/signaturetest/jakarta.ws.rs.sig_3.1.0
+                    </sigfile>
+                    <packages>jakarta.ws.rs,jakarta.ws.rs.client,jakarta.ws.rs.container,jakarta.ws.rs.core,jakarta.ws.rs.ext,jakarta.ws.rs.see</packages>
                 </configuration>
             </plugin>
         </plugins>
